rust/cube/cubeplanner/tests/snapshots/query_options__convert_tz_for_raw_time_dimension_converts_the_raw_column.snap
---
source: cubeplanner/tests/query_options.rs
expression: converted.sql
---
SELECT ("orders".created_at::timestamptz AT TIME ZONE 'America/Los_Angeles') "orders__created_at", count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
GROUP BY 1
ORDER BY  2  DESC
