rust/cube/cubeplanner/tests/snapshots/query_options__join_hints_add_a_join_the_members_do_not_need.snap
---
source: cubeplanner/tests/query_options.rs
expression: hinted.sql
---
SELECT count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
LEFT JOIN  public.users  AS "users" ON "orders".user_id = "users".id
